# CIRE

./: .gitignore  CMakeLists.txt  README.md  TODO.md  chpc_cire_update_build.sh
benchmarks/: CMakeLists.txt  parser_testing_benchmark.txt  temp.txt
benchmarks/abstraction_testing/test1/: test1.txt
benchmarks/addition/: addition.txt
benchmarks/binary_ops/addition/: addition.cpp  addition.ll  addition.txt  addition_input.txt
benchmarks/binary_ops/division/: division.txt
benchmarks/binary_ops/multiplication/: multiplication.txt
benchmarks/binary_ops/subtraction/: subtraction.txt
benchmarks/casting/: cast_test.cpp
benchmarks/example2/: CMakeLists.txt  example2.cpp  example2.ll  example2.txt  example2_input.txt
benchmarks/fpbench_c/: ArclengthWigglyFunction_old.c  ComplexSineAndCosine.c  ComplexSquareRoot.c  JacobisMethod.c  NBodySimulation.c  NMSE3.1.c  NMSE3.10.c  NMSE3.2.1_negative.c  NMSE3.3.1.c  NMSE3.3.2.c  NMSE3.3.3.c  NMSE3.3.4.c  NMSE3.3.5.c  NMSE3.3.6.c  NMSE3.3.7.c  NMSE3.3.c  NMSE3.4.1.c  NMSE3.4.2.c  NMSE3.4.3.c  NMSE3.4.4.c  NMSE3.4.5.c  NMSE3.4.c  NMSE3.5.c  NMSE3.6.c  NMSE3.7.c  NMSE3.8.c  NMSE3.9.c  NMSESection3.11.c  NMSESection3.5.c  NMSEp42_negative.c  NMSEp42_positive.c  PID.c  Pendulum.c  RocketTrajectory.c  RumpFromCProgram.c  RumpsRevisitedForFloatingPoint.c  RumpsWithPow.c  Runge-Kutta4.c  Shoelace.c  SineNewton.c  (+56 more)
benchmarks/fpbench_c/multiblock/: ArclengthWigglyFunction.c  EigenvalueComputation.c  Gustafsons.c  IterativeGram-SchmidtMethod.c  Lead-LagSystem.c  Newton-Raphsons.c  Odometry.c  Trapeze.c  squareRoot3.c  squareRoot3Invalid.c  triangleSorted.c
benchmarks/fpbench_c/unhandled/: NMSE3.2.1_positive.c  NMSE3.4.6.c  ProbabilitiesClusteringAlgorithm.c  hartman6.c  matrixDeterminant2.c  sec4-example.c  sphere.c  triangle8.c  turbine1.c
benchmarks/fpbench_ll/: ArclengthWigglyFunction_old.ll  ComplexSineAndCosine.ll  ComplexSquareRoot.ll  EigenvalueComputation.ll  IterativeGram-SchmidtMethod.ll  JacobisMethod.ll  NMSE3.1.ll  NMSE3.10.ll  NMSE3.2.1_negative.ll  NMSE3.3.1.ll  NMSE3.3.2.ll  NMSE3.3.3.ll  NMSE3.3.4.ll  NMSE3.3.5.ll  NMSE3.3.6.ll  NMSE3.3.7.ll  NMSE3.3.ll  NMSE3.4.1.ll  NMSE3.4.2.ll  NMSE3.4.3.ll  NMSE3.4.4.ll  NMSE3.4.5.ll  NMSE3.4.ll  NMSE3.5.ll  NMSE3.6.ll  NMSE3.7.ll  NMSE3.8.ll  NMSE3.9.ll  NMSESection3.11.ll  NMSESection3.5.ll  NMSEp42_negative.ll  PID.ll  Pendulum.ll  README.md  RumpFromCProgram.ll  RumpsRevisitedForFloatingPoint.ll  Shoelace.ll  SineNewton.ll  Trapeze.ll  azimuth.ll  (+61 more)
benchmarks/fpbench_ll/multiblock/: Lead-LagSystem.ll  Newton-Raphsons.ll  squareRoot3.ll
benchmarks/fpbench_ll/unhandled/: ArclengthWigglyFunction.ll  Gustafsons.ll  NBodySimulation.ll  NMSE3.2.1_positive.ll  NMSE3.3.7.ll  NMSE3.4.6.ll  NMSE3.7.ll  NMSEp42_positive.ll  Odometry.ll  ProbabilitiesClusteringAlgorithm.ll  RocketTrajectory.ll  RumpFromCProgram.ll  RumpsWithPow.ll  Runge-Kutta4.ll  cav10.ll  exp1x.ll  exp1x_32.ll  hartman3.ll  hartman6.ll  himmilbeau.ll  intro-example-mixed.ll  intro-example.ll  matrixDeterminant.ll  nonlin2.ll  predatorPrey.ll  rigidBody2.ll  sine.ll  sineOrder3.ll  smartRoot.ll  sphere.ll  sqrt_add.ll  test04_dqmom9.ll  triangle.ll  triangle1.ll  triangle11.ll  triangle12.ll  triangle5.ll  triangle6.ll  triangle7.ll  triangle9.ll  (+2 more)
benchmarks/horner/: f_horner_50.txt
benchmarks/medium_benchmarks/: burgers.cpp  lor_f64.txt
benchmarks/satire/: README.md  collect_results.py  runScript.sh
benchmarks/satire/CG_Arc/: batch_abs.slurm
benchmarks/satire/CG_EX5/: CG_ex5_noError_K20_N27_E0.0.txt  batch_abs.slurm
benchmarks/satire/CG_Pores/: CG_Pores_noError_K20_N30_E0.0.txt  batch_abs.slurm
benchmarks/satire/CG_Tref/: CG_Tref_noError_K20_N20_E0.1.txt  batch_abs.slurm
benchmarks/satire/FFT_1024/: batch_abs.slurm  fft_1024pt_sat.txt
benchmarks/satire/FFT_4096pt/: batch_abs.slurm
benchmarks/satire/MD/: batch_abs.slurm
benchmarks/satire/Scan_1024/: Scan_1024pt_sat.txt  batch_abs.slurm
benchmarks/satire/Scan_4096/: Scan_4096.txt  batch_abs.slurm
benchmarks/satire/advect3d/: batch_abs.slurm
benchmarks/satire/ccsd_type0_1/: batch_abs.slurm
benchmarks/satire/ccsd_type1_0/: batch_abs.slurm
benchmarks/satire/ccsd_type1_1/: batch_abs.slurm
benchmarks/satire/ccsd_type2_0/: batch_abs.slurm
benchmarks/satire/ccsd_type2_1/: batch_abs.slurm
benchmarks/satire/chainSum/: ChainSum_1024.txt  batch_abs.slurm
benchmarks/satire/convecdiff2d0/: batch_abs.slurm
benchmarks/satire/convecdiff2d1_t32/: batch_abs.slurm
benchmarks/satire/convecdiff2d2_t32/: batch_abs.slurm
benchmarks/satire/dqmom/: batch_abs.slurm  dqmom.txt
benchmarks/satire/fdtd1d_t64/: batch_abs.slurm  fdtd1d_64.txt
benchmarks/satire/heat1d_t32/: batch_abs.slurm  heat1d_t32.txt
benchmarks/satire/heat2d0_t32/: batch_abs.slurm
benchmarks/satire/heat2d1_t32/: batch_abs.slurm
benchmarks/satire_abs_20_25/: collect_results.py  runScript.sh
generators/: README.md  gen_cg.py
generators/cpp_generators/: gen_cg.py  gen_lorentz.py
include/: CIRE.h  CIRE_LLVM.h  Cire.h  ErrorAnalyzer.h  Graph.h  IBEXInterface.h  Logging.h  Node.h  Operations.h  Results.h  SymbolTable.h  llvm_frontend.h  utils.h
inputs/: README.md  mat3x3.txt  mat4x4.txt  mat5x5.txt
lib/: CIRE_LLVM.cpp  CMakeLists.txt  ErrorAnalyzer.cpp  Graph.cpp  IBEXInterface.cpp  Logging.cpp  Node.cpp  SymbolTable.cpp  lexer.l  parser.y
llvm_util/: utils.cpp
paper_tests/ibex_simplify/: ibex_simplify_1.cpp
paper_tests/opt_test/: associativity.cpp
paper_tests/opt_test_brute_force/: associativity1.cpp
results/fpbench_llvm_optimization-Feb16/: results_30904.json
results/fpbench_llvm_optimization_old/: results_O1_24836.json  results_O1_ffast-math_25087.json  results_O2_25273.json  results_O2_ffast-math_25487.json  results_O3_25671.json  results_O3_ffast-math_25894.json
scripts/: README.md  benchmark.py  directory_compiler.sh  plot_bwd_and_err.py
scripts/lit/: lit.py
src/: CIRE.cpp  CIRE_LLVM.cpp  CIRE_LLVMFrontend.cpp  Cire.cpp  README.md  Results.cpp  VALIDATOR.cpp  cire.cpp  lexer.l  lib_tester.cpp  parser.y  trial.cpp
util/: llvm_frontend.cpp
(+146 files in other folders)
